--- a/shein-email.html
+++ b/shein-email.html
@@ -90,7 +90,11 @@
           <p>For orders over $9.99</p>
           <p>* Applies to Select Products</p>
         </div>
-        <a href="https://example.com" class="collect-btn">Collect All</a>
+        <a
+          href="https://dioxair.github.io/shein-phising-campaign"
+          class="collect-btn"
+          >Collect All</a
+        >
       </div>
       <p class="disclaimer">Educational purposes only</p>
     </div>
